Solver that launches a new process for each call (to support Boolector).