@@ -21,6 +21,8 @@ package edu.harvard.seas.pl.formulog.smt;
  */
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
 
 import edu.harvard.seas.pl.formulog.Configuration;
 import edu.harvard.seas.pl.formulog.util.Util;
@@ -46,6 +48,12 @@ public class BoolectorProcessFactory implements ExternalSolverProcessFactory {
 
 	@Override
 	public Process newProcess() throws IOException {
-		return Runtime.getRuntime().exec("boolector --smt2" + (Configuration.smtSingleShot ? "" : " --incremental"));
+		List<String> command = new ArrayList<>();
+		command.add("boolector");
+		command.add("--smt2");
+		if (!Configuration.smtSingleShot) {
+			command.add("--incremental");
+		}
+		return new ProcessBuilder(command).redirectErrorStream(true).start();
 	}
 }
