@@ -22,6 +22,8 @@ package edu.harvard.seas.pl.formulog.smt;
 
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
 
 import edu.harvard.seas.pl.formulog.Configuration;
 import edu.harvard.seas.pl.formulog.util.Util;
@@ -47,6 +49,13 @@ public class Cvc4ProcessFactory implements ExternalSolverProcessFactory {
 
 	@Override
 	public Process newProcess() throws IOException {
-		return Runtime.getRuntime().exec("cvc4 --lang smt" + (Configuration.smtSingleShot ? "" : " --incremental"));
+		List<String> command = new ArrayList<>();
+		command.add("cvc4");
+		command.add("--lang");
+		command.add("smt");
+		if (!Configuration.smtSingleShot) {
+			command.add("--incremental");
+		}
+		return new ProcessBuilder(command).redirectErrorStream(true).start();
 	}
 }
